--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -32,7 +32,14 @@ jobs:
 
       - name: Terraform Format
         id: fmt
-        run: terraform fmt -check
+        run: |
+          terraform fmt -recursive
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
+          git add .
+          git diff-index --quiet HEAD || git commit -m "Automated: Fix terraform formatting"
+          git push
+        continue-on-error: true
 
       - name: Terraform Validate
         id: validate
