--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -56,6 +56,16 @@ jobs:
 
       - name: Terraform Apply
         if: github.ref == 'refs/heads/main'
-        run: terraform apply -auto-approve tfplan   
+        run: terraform apply -auto-approve tfplan
+
+      - name: Copy Inventory File
+        if: success()
+        run: |
+          cp inventory.ini ../ansible/
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
+          git add ../ansible/inventory.ini
+          git commit -m "Update Ansible inventory after Terraform apply"
+          git push   
 
 
