--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -42,6 +42,7 @@ jobs:
           terraform fmt -recursive
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --global user.name "github-actions[bot]"
+          git pull origin main --rebase
           git add .
           git diff-index --quiet HEAD || (git commit -m "Automated: Fix terraform formatting" && git push "https://$GITHUB_ACTOR:$GITHUB_TOKEN@github.com/$GITHUB_REPOSITORY.git" HEAD:main)
         continue-on-error: true
@@ -71,6 +72,7 @@ jobs:
           cp inventory.ini ../ansible/
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --global user.name "github-actions[bot]"
+          git pull origin main --rebase
           git add ../ansible/inventory.ini
           git commit -m "Update Ansible inventory after Terraform apply"
           git push "https://$GITHUB_ACTOR:$GITHUB_TOKEN@github.com/$GITHUB_REPOSITORY.git" HEAD:main   
