--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -77,8 +77,7 @@ jobs:
           git stash -u
           git pull origin main --rebase
           git stash pop
-          git add ../ansible/inventory.ini
-          git commit -m "Update Ansible inventory after Terraform apply"
-          git push "https://$GITHUB_ACTOR:$GITHUB_TOKEN@github.com/$GITHUB_REPOSITORY.git" HEAD:main   
+          git add ../ansible/inventory.ini inventory.ini
+          git diff-index --quiet HEAD || (git commit -m "Update Ansible inventory after Terraform apply" && git push "httpshttps://$GITHUB_ACTOR:$GITHUB_TOKEN@github.com/$GITHUB_REPOSITORY.git" HEAD:main)
 
 
