--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -21,6 +21,8 @@ jobs:
       TF_VAR_ssh_user: ${{ secrets.SSH_USER }}
       TF_VAR_ssh_password: ${{ secrets.SSH_PASSWORD }}
       TF_VAR_ssh_keys: ${{ secrets.SSH_KEYS }}
+      TF_VAR_r2_access_key: ${{ secrets.R2_ACCESS_KEY }}
+      TF_VAR_r2_secret_key: ${{ secrets.R2_SECRET_KEY }}
 
     steps:
       - name: Checkout Repository
@@ -32,7 +34,7 @@ jobs:
 
       - name: Terraform Init
         id: init
-        run: terraform init
+        run: terraform init -reconfigure
 
       - name: Terraform Format
         id: fmt
