--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -7,22 +7,30 @@ on:
     paths:
       - 'terraform/**'
 
+# Limit permissions of GITHUB_TOKEN
+permissions:
+  contents: write
+  id-token: write
+
 jobs:
   terraform:
-    name: 'Terraform'
+    name: Terraform
     runs-on: self-hosted
     defaults:
       run:
         working-directory: ./terraform
 
     env:
+      # Cloudflare R2 (S3-compatible) credentials - set these as GitHub Secrets (see instructions below)
+      AWS_ACCESS_KEY_ID: ${{ secrets.R2_ACCESS_KEY }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.R2_SECRET_KEY }}
+
+      # Terraform variables for Proxmox / SSH - keep these as TF_VAR_* (your code already expects them)
       TF_VAR_proxmox_user: ${{ secrets.PROXMOX_USER }}
       TF_VAR_proxmox_password: ${{ secrets.PROXMOX_PASSWORD }}
       TF_VAR_ssh_user: ${{ secrets.SSH_USER }}
       TF_VAR_ssh_password: ${{ secrets.SSH_PASSWORD }}
       TF_VAR_ssh_keys: ${{ secrets.SSH_KEYS }}
-      TF_VAR_r2_access_key: ${{ secrets.R2_ACCESS_KEY }}
-      TF_VAR_r2_secret_key: ${{ secrets.R2_SECRET_KEY }}
 
     steps:
       - name: Checkout Repository
@@ -31,6 +39,14 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           persist-credentials: true
           fetch-depth: 0
+
+      - name: Cache Terraform plugins
+        uses: actions/cache@v3
+        with:
+          path: ~/.terraform.d/plugin-cache
+          key: ${{ runner.os }}-terraform-${{ hashFiles('**/.terraform.lock.hcl') }}
+          restore-keys: |
+            ${{ runner.os }}-terraform-
 
       - name: Terraform Init
         id: init
@@ -81,5 +97,3 @@ jobs:
           git stash pop
           git add ../ansible/inventory.ini inventory.ini
           git diff-index --quiet HEAD || (git commit -m "Update Ansible inventory after Terraform apply" && git push origin HEAD:main)
-
-
