--- a/.github/workflows/k3s-deploy.yml
+++ b/.github/workflows/k3s-deploy.yml
@@ -34,4 +34,4 @@ jobs:
       - name: Run Ansible playbook
         working-directory: ansible
         run: |
-          ansible-playbook -i inventory.ini deploy_k3s.yml
+          ansible-playbook -i inventory.ini k3s-deploy.yml
