--- a/.github/workflows/k3s-deploy.yml
+++ b/.github/workflows/k3s-deploy.yml
@@ -1,37 +1,44 @@
-name: Deploy K3s with Ansible
+name: GitOps K3s Deploy
 
 on:
   push:
     branches: [ main ]
     paths:
-      - 'ansible/**'     # ✅ Only trigger when something inside ansible/ changes
-  workflow_dispatch:      # ✅ Still allow manual runs
+      - 'ansible/**'        # Trigger only on changes in ansible/ dir
+  workflow_dispatch:         # Allow manual trigger
 
 jobs:
   deploy:
-    runs-on: self-hosted   # ✅ Use your self-hosted runner
-
+    runs-on: self-hosted     # Your ephemeral/self-hosted runner
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up SSH
+      - name: Load SSH Private Key
         uses: webfactory/ssh-agent@v0.9.0
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-      - name: Add known hosts (optional)
+      - name: Configure SSH Known Hosts
         run: |
           mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_KNOWN_HOSTS }}" >> ~/.ssh/known_hosts
+          echo "${{ secrets.SSH_KNOWN_HOSTS }}" > ~/.ssh/known_hosts
           chmod 600 ~/.ssh/known_hosts
 
       - name: Install Ansible
         run: |
-          sudo apt update
-          sudo apt install -y ansible
+          sudo apt-get update
+          sudo apt-get install -y python3-pip
+          pip3 install ansible
 
-      - name: Run Ansible playbook
+      - name: Run K3s Installation Playbook
         working-directory: ansible
         run: |
-          ansible-playbook -i inventory.ini k3s-install.yml
+          ansible-playbook \
+            -i inventory.ini \
+            k3s-install.yml \
+            -u rao \
+            -K \
+            --ssh-extra-args="-o StrictHostKeyChecking=no"
+        env:
+          ANSIBLE_BECOME_PASSWORD: ${{ secrets.ANSIBLE_BECOME_PASSWORD }}
