--- a/.github/workflows/gitops-bootstrap.yaml
+++ b/.github/workflows/gitops-bootstrap.yaml
@@ -7,7 +7,8 @@ on:
 
 jobs:
   bootstrap:
-    runs-on: ubuntu-latest
+    # 👇 Use your self-hosted runner instead of GitHub-hosted one
+    runs-on: self-hosted
 
     steps:
       - uses: actions/checkout@v4
