--- a/.github/workflows/gitops-bootstrap.yaml
+++ b/.github/workflows/gitops-bootstrap.yaml
@@ -40,7 +40,7 @@ jobs:
       - name: 🌐 Ensure Cloudflare Tunnel exists
         id: ensure_tunnel
         env:
-          GH_TOKEN: ${{ secrets.GH_PAT }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CF_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
         run: |
@@ -146,7 +146,7 @@ jobs:
                 - service: http_status:404
           EOF
 
-          helm upgrade --install cloudflared cloudflare/cloudflared -n infra -f cloudflared-values.yaml --wait
+          helm upgrade --install cloudflare cloudflare/cloudflare-tunnel -n infra -f cloudflared-values.yaml --wait
 
       # ---------------------------------------------------
       # STEP 6: Install ExternalDNS
