--- a/.github/workflows/gitops-bootstrap.yaml
+++ b/.github/workflows/gitops-bootstrap.yaml
@@ -44,11 +44,10 @@ jobs:
           CF_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
         run: |
           set -e
-          echo "🔎 Checking for existing tunnel credentials secret..."
-          
-          # Try to read existing tunnel ID secret
+          echo "🔎 Checking for existing tunnel credentials..."
+
           EXISTING_TUNNEL_ID=$(gh secret list | grep CLOUDFLARE_TUNNEL_ID || true)
-          
+
           if [ -z "$EXISTING_TUNNEL_ID" ]; then
             echo "🆕 No tunnel found, creating new one..."
             
@@ -87,7 +86,8 @@ jobs:
           kubectl create ns external-dns --dry-run=client -o yaml | kubectl apply -f -
           kubectl create ns argocd --dry-run=client -o yaml | kubectl apply -f -
 
-          kubectl create secret generic tunnel-credentials \
+          # ✅ FIX: Secret name aligned with Helm expectations
+          kubectl create secret generic cloudflare-cloudflare-tunnel \
             -n infra --from-file=credentials.json=tunnel.json \
             --dry-run=client -o yaml | kubectl apply -f -
 
@@ -132,8 +132,6 @@ jobs:
       - name: ☁️ Install Cloudflare Tunnel
         run: |
           cat <<EOF > tunnel-values.yaml
-          credentials:
-            existingSecret: tunnel-credentials
           tunnel:
             name: "gitops-k3s-tunnel"
             id: "$TUNNEL_ID"
