--- a/.github/workflows/gitops-bootstrap.yaml
+++ b/.github/workflows/gitops-bootstrap.yaml
@@ -50,7 +50,7 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GH_PAT }}
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          CF_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
         run: |
           set -euo pipefail
           export GH_TOKEN="${GH_TOKEN}"
@@ -65,7 +65,7 @@ jobs:
             echo "Wrote tunnel.json from GitHub secret"
           else
             echo "🆕 No existing GitHub secret found. Creating new tunnel via Cloudflare API..."
-            RESPONSE=$(curl -s -X POST "https://api.cloudflare.com/client/v4/accounts/${CF_ACCOUNT_ID}/cfd_tunnel" \
+            RESPONSE=$(curl -s -X POST "https://api.cloudflare.com/client/v4/accounts/${CLOUDFLARE_ACCOUNT_ID}/cfd_tunnel" \
               -H "Authorization: Bearer ${CLOUDFLARE_API_TOKEN}" \
               -H "Content-Type: application/json" \
               --data "{\"name\":\"${TUNNEL_NAME}\"}")
@@ -81,7 +81,7 @@ jobs:
             echo "Created tunnel: $TUNNEL_ID"
 
             # fetch the credentials JSON for the tunnel
-            curl -s -X POST "https://api.cloudflare.com/client/v4/accounts/${CF_ACCOUNT_ID}/cfd_tunnel/${TUNNEL_ID}/credentials" \
+            curl -s -X POST "https://api.cloudflare.com/client/v4/accounts/${CLOUDFLARE_ACCOUNT_ID}/cfd_tunnel/${TUNNEL_ID}/credentials" \
               -H "Authorization: Bearer ${CLOUDFLARE_API_TOKEN}" \
               -o tunnel.json
 
