--- a/.github/workflows/gitops-bootstrap.yaml
+++ b/.github/workflows/gitops-bootstrap.yaml
@@ -27,7 +27,6 @@ jobs:
         with:
           version: "3.15.0"
 
-
       - name: ⚙️ Configure kubeconfig
         run: |
           mkdir -p ~/.kube
@@ -46,13 +45,13 @@ jobs:
         run: |
           set -e
           echo "🔎 Checking for existing tunnel credentials secret..."
-          
-          # Try to read existing tunnel ID secret
+
+          # Try to read existing tunnel ID secret in repo secrets (gh CLI)
           EXISTING_TUNNEL_ID=$(gh secret list | grep CLOUDFLARE_TUNNEL_ID || true)
-          
+
           if [ -z "$EXISTING_TUNNEL_ID" ]; then
             echo "🆕 No tunnel found, creating new one..."
-            
+
             RESPONSE=$(curl -s -X POST "https://api.cloudflare.com/client/v4/accounts/${CLOUDFLARE_ACCOUNT_ID}/cfd_tunnel" \
               -H "Authorization: Bearer ${CLOUDFLARE_API_TOKEN}" \
               -H "Content-Type: application/json" \
@@ -64,7 +63,7 @@ jobs:
             echo "TUNNEL_ID=$TUNNEL_ID" >> $GITHUB_ENV
             echo "Tunnel created: $TUNNEL_ID"
 
-            # Download credentials JSON
+            # Download credentials JSON (the credentials object)
             curl -s -X POST "https://api.cloudflare.com/client/v4/accounts/${CLOUDFLARE_ACCOUNT_ID}/cfd_tunnel/${TUNNEL_ID}/credentials" \
               -H "Authorization: Bearer ${CLOUDFLARE_API_TOKEN}" \
               -o tunnel.json
@@ -88,8 +87,9 @@ jobs:
           kubectl create ns external-dns --dry-run=client -o yaml | kubectl apply -f -
           kubectl create ns argocd --dry-run=client -o yaml | kubectl apply -f -
 
+          # IMPORTANT: create secret with key name "credentials.json" (chart expects this structure)
           kubectl create secret generic tunnel-credentials \
-            -n infra --from-file=tunnel.json=tunnel.json \
+            -n infra --from-file=credentials.json=tunnel.json \
             --dry-run=client -o yaml | kubectl apply -f -
 
           kubectl create secret generic cloudflare-api-token \
@@ -128,25 +128,25 @@ jobs:
           helm upgrade --install argocd argo/argo-cd -n argocd -f argocd-values.yaml --wait
 
       # ---------------------------------------------------
-      # STEP 5: Install Cloudflared
+      # STEP 5: Install Cloudflare Tunnel (chart expects credentials.existingSecret semantics)
       # ---------------------------------------------------
-      - name: ☁️ Install Cloudflared
+      - name: ☁️ Install Cloudflare Tunnel
         run: |
-          cat <<EOF > cloudflared-values.yaml
-          cloudflared:
-            tunnelName: "gitops-k3s-tunnel"
-            tunnelId: "${TUNNEL_ID}"
-            secretName: "tunnel-credentials"
-            config:
-              ingress:
-                - hostname: "*.raoshahzaib.site"
-                  service: https://traefik.kube-system.svc.cluster.local:443
-                  originRequest:
-                    noTLSVerify: true
-                - service: http_status:404
+          cat <<EOF > tunnel-values.yaml
+          credentials:
+            existingSecret: tunnel-credentials
+          tunnel:
+            name: "gitops-k3s-tunnel"
+            id: "${TUNNEL_ID}"
+          ingress:
+            - hostname: "*.raoshahzaib.site"
+              service: https://traefik.kube-system.svc.cluster.local:443
+              originRequest:
+                noTLSVerify: true
+            - service: http_status:404
           EOF
 
-          helm upgrade --install cloudflare cloudflare/cloudflare-tunnel -n infra -f cloudflared-values.yaml --wait
+          helm upgrade --install cloudflare cloudflare/cloudflare-tunnel -n infra -f tunnel-values.yaml --wait
 
       # ---------------------------------------------------
       # STEP 6: Install ExternalDNS
