--- a/.github/workflows/k3s-deploy.yml
+++ b/.github/workflows/k3s-deploy.yml
@@ -32,7 +32,7 @@ jobs:
           pip3 install ansible
 
       - name: Run K3s Installation Playbook
-        working-directory: ansible
+        working-directory: ansible/k3s
         run: |
           ansible-playbook \
             -i inventory.ini \
