delete namespace updated

--- a/ansible/argocd/roles/argocd/tasks/main.yml
+++ b/ansible/argocd/roles/argocd/tasks/main.yml
@@ -66,7 +66,7 @@
             recurse: true
         destination:
           server: https://kubernetes.default.svc
-          namespace: default
+          namespace: argocd
         syncPolicy:
           automated:
             prune: true
