--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -90,7 +90,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          cp inventory.ini ../ansible/k3s/
+          cp ../ansible/k3s/inventory.ini .
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --global user.name "github-actions[bot]"
           git stash -u
