--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -90,11 +90,11 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          cp ../ansible/k3s/inventory.ini .
+          
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --global user.name "github-actions[bot]"
           git stash -u
           git pull origin main --rebase
           git stash pop
-          git add ../ansible/k3s/inventory.ini inventory.ini
+          git add ../ansible/k3s/inventory.ini 
           git diff-index --quiet HEAD || (git commit -m "Update Ansible inventory after Terraform apply" && git push origin HEAD:main)
